--- a/googlecloudML.ipynb
+++ b/googlecloudML.ipynb
@@ -240,22 +240,23 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 102
+          "height": 119
         },
-        "outputId": "13fbe81e-6c3c-45c9-edb2-76ac87838fc3"
+        "outputId": "a6d091b4-c4f4-4abc-c5b5-5b9554f8ce30"
       },
       "cell_type": "code",
       "source": [
         "foreigntext = responses['responses'][0]['textAnnotations'][0]['description']\n",
         "foreignlang = responses['responses'][0]['textAnnotations'][0]['locale']\n",
-        "print('Language Code = {}.  Foreign Text:\\n{}'.format(foreignlang,foreigntext))\n"
+        "print('Idioma = {}. \\nTexto:\\n{}'.format(foreignlang,foreigntext))\n"
       ],
-      "execution_count": 14,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Language Code = zh.  Foreign Text:\n",
+            "Idioma = zh. \n",
+            "Texto:\n",
             "请您爱护和保\n",
             "护卫生创建优\n",
             "美水环境\n",
